--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,12 @@ android {
         jvmTarget = '11'
     }
 
-    viewBinding {
-        enabled = true
+//    viewBinding {
+//        enabled = true
+//    }
+
+    buildFeatures {
+        viewBinding true
     }
 }
 
